--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.6"
+    "nodemon": "^3.1.6",
+    "resend": "^6.1.0"
   },
   "name": "panel-activator",
   "version": "1.0.0",
